--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -63,6 +63,16 @@
               <li><a class="dropdown-item" th:href="@{/templateLink/list}">Template Links</a></li>
             </ul>
           </li>
+          <li class="nav-item dropdown" >
+            <a class="nav-link dropdown-toggle" th:classappend="${menu=='admin' ? 'active' : ''}" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Admin
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item">Change Owner</a></li>
+              <li><a class="dropdown-item" th:href="@{/admin/deleteSpecification/list}">Delete Specification</a></li>
+              <li><a class="dropdown-item">Delete Account</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
