--- a/src/main/resources/templates/admin/updateSoamEnum.html
+++ b/src/main/resources/templates/admin/updateSoamEnum.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Enum</h2>
 
-  <form th:object="${soamEnum}" class="form-horizontal" id="add-specification-form" method="post">
+  <form th:object="${soamEnum}" class="form-horizontal" id="update-soam-enum-form" method="post">
     <div class="form-group has-feedback">
       <input
         th:replace="~{fragments/inputField :: readOnly ('Type', 'type', 'text')}" />
