--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html th:fragment="layout (template, head, menu)">
+<html th:fragment="layout (template, head, menu)" class="h-100">
 
 <head>
 
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body class="h-100">
   <nav class="navbar navbar-expand-lg navbar-dark mb-0" role="navigation">
     <div class="container-fluid">
       <a class="navbar-brand" th:href="@{/}" th:text="#{soam.top-entity-name}">SOAM</a>
@@ -177,8 +177,8 @@
       </ol>
     </div>
   </nav>
-  <div class="container-fluid">
-    <div class="container xd-container">
+  <div class="container-fluid h-100">
+    <div class="container xd-container h-100">
       <div th:replace="~{fragments/flash :: flash}"></div>
       <th:block th:insert="${template}" />
       <div class="container mt-4">
