--- a/src/main/resources/templates/specifications/specifications.html
+++ b/src/main/resources/templates/specifications/specifications.html
@@ -5,42 +5,13 @@
     <script type="text/javascript" th:src="@{/resources/js/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/resources/js/jstree.min.js}"></script>
     <script type="text/javascript" th:src="@{/resources/js/specifications.js}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
 <div class="row h-100">
     <div class="col-4">
-        <div id="tree">
-            <ul>
-                <li data-type="specifications">Specifications
-                    <ul th:each="specification : ${specifications}">
-                        <li data-jstree='{"icon":"bi bi-file-text"}' data-type="specification" th:attr="data-id=${specification.id}"><span th:text="${specification.name}">Specification name</span>
-                            <ul>
-                                <li data-type="objectives">Objectives
-                                    <ul th:each="specificationObjective : ${specification.specificationObjectives}">
-                                        <li data-jstree='{"icon":"bi bi-bullseye"}' data-type="specificationObjective" th:attr="data-id=${specificationObjective.id}" th:text="${specificationObjective.name}">Specification Objective name</li>
-                                    </ul>
-                                </li>
-                                <li data-type="stakeholders">Stakeholders
-                                    <ul th:each="stakeholder : ${specification.stakeholders}">
-                                        <li data-jstree='{"icon":"bi bi-person-check-fill"}' data-type="stakeholder" th:attr="data-id=${stakeholder.id}"><span th:text="${stakeholder.name}">Stakeholder name</span>
-                                            <ul>
-                                                <li data-type="stakeholder-objectives">Stakeholder Objectives
-                                                    <ul th:each="stakeholderObjective : ${stakeholder.stakeholderObjectives}">
-                                                        <li data-jstree='{"icon":"bi bi-check-circle"}' data-type="stakeholderObjective" th:attr="data-id=${stakeholderObjective.id}" th:text="${stakeholderObjective.specificationObjective.name}">Stakeholder Objective name</li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+        <div id="tree"></div>
     </div>
     <div class="col-8">
         <div id="main">Main panel</div>
