--- a/src/main/resources/templates/specification/addUpdateSpecification2.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification2.html
@@ -7,6 +7,11 @@
       id="add-specification-form" method="post" onsubmit="soamFormSubmit(this);return false;">
     <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
     <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
+    <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
+        <span th:if="${specification['new'] && collectionType == 'templateDeepCopy'}" class="ms-2">
+            <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Create from Template', 'No Specification Templates defined', 'templateDeepCopy')}"/>
+        </span>
+    </div>
     <div class="form-group has-feedback">
         <input
                 th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
@@ -29,3 +34,7 @@
         </div>
     </div>
 </form>
+
+<script type="text/javascript">
+    initCollectionDropdown();
+</script>
