--- a/src/main/resources/templates/specification/addUpdateSpecification2.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification2.html
@@ -8,6 +8,9 @@
     <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
     <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
+        <span th:if="${specification['new'] && collectionType == 'srcSpecification'}">
+            <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specifications}, 'Copy Existing Specification', 'No Specifications defined', 'srcSpecification')}"/>
+        </span>
         <span th:if="${specification['new'] && collectionType == 'templateDeepCopy'}" class="ms-2">
             <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Create from Template', 'No Specification Templates defined', 'templateDeepCopy')}"/>
         </span>
@@ -37,4 +40,5 @@
 
 <script type="text/javascript">
     initCollectionDropdown();
+
 </script>
