--- a/src/main/resources/templates/stakeholder/addUpdateStakeholder2.html
+++ b/src/main/resources/templates/stakeholder/addUpdateStakeholder2.html
@@ -22,7 +22,11 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10 d-flex">
-            <button class="btn btn-primary" type="submit"
+            <button class="btn btn-primary" type="button" onclick="soamFormCancel()">
+                <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                <span>Cancel</span>
+            </button>
+            <button class="btn btn-primary ms-2" type="submit"
                     th:with="text=${stakeholder['new']} ? 'Add Stakeholder' : 'Update Stakeholder',
                   icon=${stakeholder['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
                 <i class="fa me-1" th:classappend="${icon}" aria-hidden="true"></i>
